# redes-2-audio-p2p

./: .gitignore  Makefile  README.md  pyproject.toml
redes_2_audio_p2p/: __init__.py  __main__.py  handler.py
redes_2_audio_p2p/exec/: client.py  constants.py  globals.py  server.py  wave-receiver.py  wave-sender.py  wave_receiver.py  wave_sender.py
tests/: conftest.py  test_server.py  util.py
