[tool.poetry]
name = "redes-2-audio-p2p"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "redes_2_audio_p2p"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
pyflakes = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
